# Gestureye

./: ARCHITECTURE_EXPLANATION.md  BLUETOOTH_SETUP.md  LINUX_BLUETOOTH_SETUP.md  README.md  SOCKET_COMMUNICATION_GUIDE.md  app.py  config.py  environment.yml  gesture_bindings.json  get_linux_bluetooth_mac.py  pyproject.toml  requirements.txt  test_bluetooth_fix.py  test_bluetooth_simple.py  test_gesture_bindings.py  test_platform_compatibility.py
core/: __init__.py  action_executor.py  gesture_bindings.py  socket_server.py
dyn_gestures/: README.md  README_BLUETOOTH.md  app.py  config.py  gesture_manager.py  hand_utils.py  pyproject.toml  requirements.txt
dyn_gestures/bluetooth/: __init__.py  manager.py  protocol.py  raspberry_pi_sender.py  receiver.py  sender.py  utils.py
dyn_gestures/core/: __init__.py  action_executor.py  gesture_bindings.py
dyn_gestures/examples/: bluetooth_test.py
dyn_gestures/gestures/: __init__.py
dyn_gestures/gestures/dynamic/: swipe.py
dyn_gestures/gestures/static/: ok_sign.py
dyn_gestures/tools/: ui_converter.py
dyn_gestures/ui/: __init__.py  main_window.py  main_window.ui  main_window_ui.py
dyn_gestures/ui/threads/: __init__.py  gesture_detection.py
dyn_gestures/ui/widgets/: __init__.py  binding_config.py
executor/: generic_executor.py  os_manager.py
executor/Darwin/: macos_automator.py  macos_executor.py
executor/Linux/: __init__.py  wayland_executor.py  x11_executor.py
executor/Windows/: API_REFERENCE.md  examples.py  test_basic.py  test_drag_functionality.py  window_controller.py  windows_executor.py
tools/: ui_converter.py
ui/: __init__.py  main_window.py  main_window.ui  main_window_ui.py
ui/threads/: __init__.py  socket_gesture_receiver.py
ui/widgets/: __init__.py  binding_config.py  gesture_history_widget.py
windows_api_easy/: README.md  __init__.py  gesture_operator.py  window_finder.py
