[project]
name = "gesture-control-system"
version = "0.1.0"
description = "基于手势识别的系统控制器"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.0.0",
    "pynput>=1.7.0",
    # Windows 平台特定依赖
    "pywin32; sys_platform == 'win32'",
]

# 可选依赖组
[project.optional-dependencies]
# Linux 增强功能
linux = [
    "python-xlib>=0.33",  # X11 窗口操作
]

# 开发依赖
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

# 完整安装 (包含所有可选功能)
full = [
    "gesture-control-system[linux,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV 包管理器配置
dev-dependencies = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.uv.sources]
# 开发时本地包配置
gesture-control-system = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["core", "ui"]

# 工具配置
[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
