[project]
name = "gesture-control-system"
version = "0.1.0"
description = "基于手势识别的系统控制器"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.0.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.0",
    # Windows 平台特定依赖
    "pywin32; sys_platform == 'win32'",
    "py-applescript; sys_platform == 'darwin'",
]
